--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@charset 'UTF-8';
+/*FIXME: quote text / sign up btn*/
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
@@ -17,6 +19,7 @@ body {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    width: 100vh;
 }
 
 header, .intro, footer {
@@ -26,7 +29,7 @@ header, .intro, footer {
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
-    text-shadow: 5px 5px 5px black, 0px 0px 20px black, 0px 0px 40px white;
+    text-shadow: 5px 5px 5px black, 5px 5px 20px black, 5px 5px 40px white;
 }
 
 header, .intro {
@@ -52,7 +55,7 @@ header, .intro {
     margin-bottom: -10px;
     inline-size: 350px;
     overflow-wrap: break-word;
-    margin-left: 14%;
+    margin-left: 12%;
 }
 
 .under-title {
@@ -75,29 +78,27 @@ header, .intro {
     background-color: #1F2937;
 }
 
-.rnd1 {
-    background-image: url("imgs/1013981.jpg");
-}
-
 .content {
     display: flex;
-    width: 100vw;
-    color: white;
-    background-color: #1F2937;
     justify-content: center;
     align-items: center;
+    width: 100vw;
+    align-self: stretch;
+    color: white;
+    background-color: #1F2937;
     flex-wrap: wrap;
+    flex-direction: column;
     padding: 64px;
 }
 
 .content h2 {
-    text-align: center;
     font-size: 32px;
 }
 
 .cards {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 32px;
@@ -109,7 +110,6 @@ header, .intro {
 }
 
 .card {
-    text-align: center;
     transition:ease-in .7s;
 }
 
@@ -149,6 +149,12 @@ a {
     margin-left: 15%;
 }
 
+button:hover {
+    background: white;
+    color: black;
+    transition:ease-in .2s;
+}
+
 .btn2 {
     color: white;
     background-color: black;
@@ -161,9 +167,74 @@ a {
     padding-bottom: 2px;
 }
 
+.quote {
+    color: white;
+    width: 100vw;
+    font-size: 32px;
+    padding: 80px 35%;
+    background-image: url("imgs/background2.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    text-shadow: 5px 5px 5px black, 5px 5px 20px black, 5px 5px 40px white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.in-quote {
+    align-self: stretch;
+    align-items: center;
+    inline-size: 250px;
+    overflow-wrap: break-word;
+}
+
+.author {
+    display: flex;
+    font-size: 22px;
+    flex-direction: row-reverse;
+}
+
+.sign-up-section {
+    width: 100vw;
+    background-color: #1F2937;
+    align-self: stretch;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    gap: 32px;
+    padding: 36px;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    background-color: black;
+    border-radius: 10px;
+    color: white;
+    padding: 36px;
+    margin: 100px auto;
+    gap: 32px;
+}
+
+.sign-p {
+    margin-top: -42px;
+    font-size: 12px;
+}
+
 footer {
     text-align: center;
     width: 100vw;
+    padding: 24px 0px;
+    font-size: 19px;
+    align-self: stretch;
 }
 
 @media only screen and (max-width: 783px){
