--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @charset 'UTF-8';
-/*FIXME: quote text / sign up btn*/
+/*FIXME: sign up btn*/
 body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
@@ -85,10 +85,10 @@ header, .intro {
     width: 100vw;
     align-self: stretch;
     color: white;
-    background-color: #1F2937;
     flex-wrap: wrap;
     flex-direction: column;
-    padding: 64px;
+    padding: 88px 0px;
+    background-color: #1F2937;
 }
 
 .content h2 {
@@ -153,6 +153,69 @@ button:hover {
     background: white;
     color: black;
     transition:ease-in .2s;
+    border: 2px solid black;
+}
+
+.quote {
+    color: white;
+    font-size: 38px;
+    font-weight: lighter;
+    font-style: italic;
+    padding: 150px 35%;
+    background-image: url("imgs/background2.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    text-shadow: 5px 5px 5px black, 5px 5px 20px black, 5px 5px 40px white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    flex-direction: column;
+}
+
+.author {
+    display: flex;
+    flex-direction: row-reverse; 
+    font-size: 24px;
+    margin-left: 30%;
+}
+
+.sign-up-section {
+    width: 100vw;
+    background-color: #1F2937;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    gap: 32px;
+    padding: 36px;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: black;
+    border-radius: 10px;
+    color: white;
+    padding: 36px;
+    margin: 100px 0px;
+    gap: 32px;
+}
+
+.action {
+    margin-top: 0px;
+}
+
+.sign-p {
+    margin-top: -42px;
+    margin-bottom: 0px;
+    font-size: 12px;
 }
 
 .btn2 {
@@ -167,72 +230,11 @@ button:hover {
     padding-bottom: 2px;
 }
 
-.quote {
-    color: white;
-    width: 100vw;
-    font-size: 32px;
-    padding: 80px 35%;
-    background-image: url("imgs/background2.jpg");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-    background-attachment: fixed;
-    text-shadow: 5px 5px 5px black, 5px 5px 20px black, 5px 5px 40px white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: stretch;
-    flex-wrap: wrap;
-    flex-direction: column;
-}
-
-.in-quote {
-    align-self: stretch;
-    align-items: center;
-    inline-size: 250px;
-    overflow-wrap: break-word;
-}
-
-.author {
-    display: flex;
-    font-size: 22px;
-    flex-direction: row-reverse;
-}
-
-.sign-up-section {
-    width: 100vw;
-    background-color: #1F2937;
-    align-self: stretch;
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
-    gap: 32px;
-    padding: 36px;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-.text {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    background-color: black;
-    border-radius: 10px;
-    color: white;
-    padding: 36px;
-    margin: 100px auto;
-    gap: 32px;
-}
-
-.sign-p {
-    margin-top: -42px;
-    font-size: 12px;
-}
 
 footer {
     text-align: center;
     width: 100vw;
-    padding: 24px 0px;
+    padding: 32px 0px;
     font-size: 19px;
     align-self: stretch;
 }
