--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 /*FIXME: sign up btn*/
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #1F2937;
     margin: 0px;
     padding: 0px;
     display: flex;
